# chatter-frontend

./: AGENTS.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: CMakeLists.txt  ChatterClient.cpp  ChatterClient.h  CommandCatalog.cpp  CommandCatalog.h  MainWindow.cpp  MainWindow.h  Makefile  TerminalWidget.cpp  TerminalWidget.h  cmake_install.cmake  main.cpp
